# ctranslate2-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/foundational_api_20260113/: plan.md
conductor/tracks/foundational_api_20260113/: metadata.json  plan.md  spec.md
scripts/: build_docker.sh  test_api.sh
src/: config.rs  lib.rs  main.rs  model.rs  state.rs
src/api/: openai.rs
tests/: api_integration_test.rs  config_test.rs  health_check.rs  model_manager_test.rs  openai_schema_test.rs
